--- a/index.html
+++ b/index.html
@@ -3,57 +3,88 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=0.75, user-scalable=0">
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>Mark Adams</title>
-		<link rel="profile" href="http://gmpg.org/xfn/11" />
-		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css" />
-		<link rel="stylesheet" type="text/css" href="css/home.css" />
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>{{ page.title }}</title>
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
+		<!-- Optional theme -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+
+		<!-- Fonts -->
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
+		<!-- Local stylesheet -->
+		<link rel="stylesheet" href="/css/home.css">
+
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
+		<script>
+			var blog_posts = [
+			{% for post in site.posts limit:30 %}
+				{'url': '{{ post.url }}', 'date': '{{ post.date | date: "%Y-%m-%d" }}', 'title': '{{post.title}}' },
+			{% endfor %}
+			];
+		</script>
 	</head>
 	<body>
-		<div id="content">
-			<div id="header" class="s1">
-				<h1>Mark Adams</h1>
-				<p class="subheading"><span class="devTypes">software | web</span> developer</p>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-offset-5 col-md-4 top-heading">
+					<h1>Mark Adams</h1>
+					<span class="code">software developer</span>
+				</div>
 			</div>
+			<div class="row">
+				<div class="col-md-offset-3 col-md-2">
+					<img class="profile-photo center-block" src="http://www.gravatar.com/avatar/968d5dfb184edf2642ef5fdc53055738?s=150">
+					<div class="profile-caption text-center">
+						<div>
+							<i class="fa fa-location-arrow"></i>
+							<span><a href="https://www.google.com/maps/place/Austin,+TX/">Austin, TX</a></span>
+						</div>
+						<div>
+							<i class="fa fa-briefcase"></i>
+							<span><a href="https://www.atlassian.com">Atlassian</a></span>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4" id="profiles">
+					{% for profile in site.data.profiles %}
+					<div>
+						<i title="{{ profile.title }}" class="fa {{ profile.icon }}"></i>
+						<a href="{{ profile.link }}" rel="me">{{ profile.label }}</a>
+					</div>
+					{% endfor %}
+				</div>
+			</div>
+
+
+
+			<!--
 			<nav>
-				<ul class="horList c cText">
+				<ul>
 					{% for item in site.data.menu %}
 					<li><a href="{{ item.link }}"><img src="{{ item.icon }}" title="{{ item.title }}" /></a></li>
 					{% endfor %}
 				</ul>
 			</nav>
-			<ul id="things" class="horList c cText">
-				<li><a href="/resume/">[ <span class="lk">Resume</span> ]</a></li>
-				<li>.</li>
-				<li><a href="http://twitter.com/markadams">[ <span class="lk">Twitter</span> ]</a></li>
-				<li>.</li>
-				<li><a href="https://bitbucket.org/markadams">[ <span class="lk">Bitbucket</span> ]</a></li>
-				<li class="breakItem"><a href="https://keybase.io/kramsmada">[ <span class="lk">GPG: 0xC7A05E3FC972098C</span> ]</a></li>
-			</ul>
-
-			<h2>Recent posts...</h2>
-			<ul class="c">
-				{% for post in site.posts limit:5 %}
-				<li>
-					<a href="{{ post.url }}">{{ post.date | date: "%Y.%m.%d" }} .. {{ post.title }}</a>
-				</li>
-				{% endfor %}
-			</ul>
+			<div id="posts">
+				<h2>Recent posts...</h2>
+				<ul class="c">
+					{% for post in site.posts limit:5 %}
+					<li>
+						<a href="{{ post.url }}">{{ post.date | date: "%Y.%m.%d" }} .. {{ post.title }}</a>
+					</li>
+					{% endfor %}
+				</ul>
+			</div>
+			-->
 
 
 		</div>
 
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-		<script src="scripts/home.js"></script>
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-		  ga('create', 'UA-3669608-3', 'auto');
-		  ga('send', 'pageview');
-		</script>
 	</body>
 </html>
