--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<title>{{ page.title }}</title>
 		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
 		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
 
 		<!-- Fonts -->
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -19,7 +19,7 @@
 		<link rel="stylesheet" href="/css/home.css">
 
 		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
 		<script>
 			var blog_posts = [
@@ -32,13 +32,12 @@
 	<body>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-offset-5 col-md-4 top-heading">
-					<h1>Mark Adams</h1>
-					<span class="code">software developer</span>
-				</div>
+
+			<div class="row">
+
 			</div>
 			<div class="row">
-				<div class="col-md-offset-3 col-md-2">
+				<div class="col-xs-12 col-md-offset-3 col-md-2 profile-left">
 					<img class="profile-photo center-block" src="http://www.gravatar.com/avatar/968d5dfb184edf2642ef5fdc53055738?s=150">
 					<div class="profile-caption text-center">
 						<div>
@@ -51,13 +50,20 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4" id="profiles">
-					{% for profile in site.data.profiles %}
-					<div>
-						<i title="{{ profile.title }}" class="fa {{ profile.icon }}"></i>
-						<a href="{{ profile.link }}" rel="me">{{ profile.label }}</a>
+				<div class="col-xs-12 col-md-4">
+					<div class="top-heading">
+						<h1>Mark Adams</h1>
+						<span class="code">software developer</span>
 					</div>
-					{% endfor %}
+					<div id="profiles">
+						{% for profile in site.data.profiles %}
+						<div>
+							<i title="{{ profile.title }}" class="fa {{ profile.icon }}"></i>
+							<a href="{{ profile.link }}" rel="me">{{ profile.label }}</a>
+						</div>
+						{% endfor %}
+					</div>
+
 				</div>
 			</div>
 
